--- a/index.html
+++ b/index.html
@@ -1,1 +1,57 @@
-#Portfolio
+<!doctype html>
+
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+
+  <title>Sam Keating/title>
+  <meta name="description" content="The HTML5 Herald">
+  <meta name="author" content="SitePoint">
+
+  <link rel="stylesheet" href="css/styles.css?v=1.0">
+
+</head>
+
+<body>
+  <script src="js/scripts.js"></script>
+  <h1>Sam Keating</h1>
+  <nav class="navbar">
+<ul>
+  <li><a href="default.asp">Home</a></li>
+  <li><a href="news.asp">About</a></li>
+  <li><a href="contact.asp">My Work</a></li>
+  <li><a href="about.asp">Contact</a></li>
+</ul>
+
+  </nav>
+<div id="main-image">
+    <h1>Copywriter and Content Creator</h1>
+    <h2>Good writing tells the truth. I help you tell yours.</h2>
+</div>
+<br>
+<div class="container" id="aboutMe">
+<div class="aboutMeHeader">
+<h1>About Me</h1>
+</div>
+<div id="aboutMeText">
+    <h2> "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</h2>
+</div>
+<div id="aboutMePhoto">
+    <img src="#" alt="Photo of Me">
+</div>
+</div>
+<br>
+<div class ="container" id="services">
+<div id="ServicesHeader"><h1>Services</h1></div>
+<div id="blogpostsHeader"><h1>Blog Posts</h1></div>
+<div id="techHeader"><h1>Technical Writing</h1></div>
+<div id="contentHeader"><h1>Content Strategy</h1></div>
+</div>
+<br>
+
+</div>
+
+
+</div>
+</body>
+</html>
